# Kairos

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/aletheia/: base_dev.yaml  base_prod.yaml  growth.yaml  pendulums.yaml  ratchet.yaml
examples/: aletheia_abc_pathA_validate.py  aletheia_abc_validate.py  aletheia_capability_aware_abliterate.py  aletheia_codebook_restore.py  aletheia_codebook_validate.py  aletheia_codebook_validate_v2.py  aletheia_gemma4_heal.py  early_stop_demo.py  finetune_deepseek_r1.py  gemma4_lora_sft.py  gemma4_smoke.py  launch_mamba_pretraining.sh  multi_seed_validation.py  pareto_guard_demo.py  pendulum_lr_demo.py  sweep_demo.py  train_mamba_1b.py  train_with_kairos.py
examples/aletheia/: baseline_eval.py  prepare_teacher_corpus.py  train_dev_8b.py  train_prod_42b.py
kairos/: __init__.py  _gm_path.py  acceleration.py  antiresonant_init.py  bundles.py  callbacks.py  core.py  curriculum.py  growth_controller.py  pareto_guard.py  pendulum_lr.py  probe.py  sweep.py
kairos/aletheia/: __init__.py  phase_b.py
kairos/integrations/: __init__.py  hf.py  lightning.py
results/: SUMMARY.md  aletheia_codebook_gemma4_e2b.json  aletheia_gemma4_perplexity_run.json  aletheia_pathA_mistral7b.json  aletheia_pathA_qwen25_3b_n200.json  aletheia_pathA_qwen25_7b.json  aletheia_pathA_qwen25_7b_cot.json  mamba_ft_metrics.json  mamba_pretrain_metrics.json  multi_seed_validation.json
tests/: test_integrations_mocked.py  test_kairos.py  test_v02_components.py  test_v03_components.py
tests/aletheia/: conftest.py  test_bronze.py  test_cycle.py  (+7 more)
(+40 files in other folders)
