[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos-grokking"
version = "0.1.0"
description = "Grokking-aware training-optimizer toolkit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "cassandra-transitions",
    "grokking-monitor",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
hf = ["transformers>=4.40"]
lightning = ["pytorch-lightning>=2.0"]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["kairos", "kairos.integrations"]
